sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:12: error: value - is not a member of Boolean
			fin -=1
                            ^